    binding). (Nikita)

- PDO_ODBC:
  . Fixed bug #67465 (NULL Pointer dereference in odbc_handle_preparer). (cmb)

- Standard:
  . Fixed bug #80114 (parse_url does not accept URLs with port 0). (cmb, twosee)
  . Fixed bug #76943 (Inconsistent stream_wrapper_restore() errors). (cmb)
  . Fixed bug #76735 (Incorrect message in fopen on invalid mode). (cmb)

01 Oct 2020, PHP 7.3.23

- Core:
  . Fixed bug #80048 (Bug #69100 has not been fixed for Windows). (cmb)
  . Fixed bug #80049 (Memleak when coercing integers to string via variadic
    argument). (Nikita)
  . Fixed bug #79699 (PHP parses encoded cookie names so malicious `__Host-` 
    cookies can be sent). (CVE-2020-7070) (Stas)

- Calendar:
  . Fixed bug #80007 (Potential type confusion in unixtojd() parameter parsing).
    (Andy Postnikov)

- COM:
  . Fixed bug #64130 (COM obj parameters passed by reference are not updated).
    (cmb)

- OPcache:
  . Fixed bug #80002 (calc free space for new interned string is wrong).
    (t-matsuno)
  . Fixed bug #79825 (opcache.file_cache causes SIGSEGV when custom opcode
    handlers changed). (SammyK)

- OpenSSL:
  . Fixed bug #79601 (Wrong ciphertext/tag in AES-CCM encryption for a 12 
    bytes IV). (CVE-2020-7069) (Jakub Zelenka)

- PDO:
  . Fixed bug #80027 (Terrible performance using $query->fetch on queries with
    many bind parameters). (Matteo)

- SOAP:
  . Fixed bug #47021 (SoapClient stumbles over WSDL delivered with
    "Transfer-Encoding: chunked"). (Matteo)

- Standard:
  . Fixed bug #79986 (str_ireplace bug with diacritics characters). (cmb)
  . Fixed bug #80077 (getmxrr test bug). (Rainer Jung)
  . Fixed bug #72941 (Modifying bucket->data by-ref has no effect any longer).
    (cmb)
  . Fixed bug #80067 (Omitting the port in bindto setting errors). (cmb)

03 Sep 2020, PHP 7.3.22

- Core:
  . Fixed bug #79884 (PHP_CONFIG_FILE_PATH is meaningless). (cmb)
  . Fixed bug #77932 (File extensions are case-sensitive). (cmb)